--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -13,7 +13,7 @@ RUN npm install
 # Copy the rest of the application code to the container
 COPY . .
 
-FROM alpine:3.18
+FROM alpine:latest
 
 WORKDIR /app
 
@@ -22,7 +22,7 @@ RUN apk update && apk add npm
 COPY --from=build /usr/src/app /app
 
 # Expose the port the app runs on
-EXPOSE 3000
+EXPOSE 3001
 
 # Define the command to run your app
 CMD ["npm", "start"]
