updated docker fie with corect node js v

--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5001",
+  "proxy": "http://localhost:5001npm ",
   "eslintConfig": {
     "extends": "react-app"
   },
