--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,13 @@ services:
     image: mongo:4.4
     ports:
       - "3000:3000"
-    volumes:
-      - mongo-data:/data/db
-
+  networks:
+   - yolo_default
+   
+   
 volumes:
-  mongo-data:
+mongo_data:
+backend_data:
+driver: local
+
+
