--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,40 @@
 services:
   client:
     build: ./client
+    dockerfie : Dockerfile
+
     ports:
-      - "3050:3050"
+      - "3000:3000"
     depends_on:
       - backend
+    networks : yolo_default
 
   backend:
     build: ./backend
     ports:
-      - "5050:5050"
+      - "5000:5000"
     depends_on:
       - mongo
     environment:
       MONGO_URL: 'mongodb+srv://holliemwangi:H0llies@m@tmcluster.zbhbjtc.mongodb.ne/'
+    networks:
+      - yolo_default
 
   mongo:
     image: mongo:4.4
     ports:
-      - "3000:3000"
-  networks:
-   - yolo_default
+      - "27017:27017"
+    networks:
+      - yolo_default
    
    
 volumes:
-mongo_data:
-backend_data:
-driver: local
+  mongo_data: datavol
+  backend_data: datavol
+  driver: local
+
+networks:
+   yolo_default:
+   driver: bridge
 
 
