update the main.yml file for both frontend and backend

--- a/roles/backend-deployment/tasks/main.yml
+++ b/roles/backend-deployment/tasks/main.yml
@@ -1,14 +1,15 @@
 ---
 - name: Pull image from repository
   docker_image:
-    name: brianbwire/brian-yolo-backend:v1.0.0
+    name: holidahmwangi23/yoloprojectbackend:V1.0.1
     source: pull
 
 - name: Create Node.js Backend Container
   docker_container:
-    name: brian-yolo-backend
-    image: brianbwire/brian-yolo-backend:v1.0.0
+    name: elegant_dijkstra
+    image: yolo-backend:V1.0.1
     networks:
+      - yolo_default
       - name: app-net
     ports:
       - "5000:5000"
