--- a/roles/frontend-deployment/tasks/main.yml
+++ b/roles/frontend-deployment/tasks/main.yml
@@ -4,14 +4,14 @@
     name: holidahmwangi23/yoloproject:V1.0.3
     source: pull
 
-- name: Create Node.js Backend Container
+- name: Create Node.js Frontend Container
   docker_container:
-    name: affectionate_taussig
+    name: vibrant_curie
     image: yolo-client:V1.0.3
     networks:
       - yolo_default
-      - name: app-net
+      - name: yolo_app
     ports:
-      - "5000:5000"
+      - "3000:3000"
     command: "npm start"
   become: yes
