removed conflicting files on branches

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
-inventory = hosts
+inventory = /home/holidah/yolo/inventory.yml
 remote_user = vagrant
-private_key_file = .vagrant/machines/default/virtualbox/private_key
+private_key_file = /home/holidah/Downloads/DevopsClass/Dev06/yolo/.vagrant/machines/default/virtualbox/private_key
 host_key_checking = False
 roles_path = roles
