--- a/roles/backend-deployment/tasks/main.yml
+++ b/roles/backend-deployment/tasks/main.yml
@@ -1,8 +1,20 @@
 ---
+
+
+- name: Clone frontend repository
+  git:
+    repo: 'https://github.com/holidahHM/yolo/tree/main/backend'
+    dest: /home/holidah/Downloads/DevopsClass/Dev06/yolo/backend
+
+
+
+
 - name: Pull image from repository
   docker_image:
     name: holidahmwangi23/yoloprojectbackend:V1.0.1
     source: pull
+
+
 
 - name: Create Node.js Backend Container
   docker_container:
