Updated roles deployment.yml files

--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: brianbwire/brian-yolo-backend:v1.0.0
+          image: holidahmwangi23/yoloprojectbackend:V1.0.1
           command: ["npm", "start"] 
           ports:
             - containerPort: 5000
