--- a/roles/frontend-deployment/tasks/main.yml
+++ b/roles/frontend-deployment/tasks/main.yml
@@ -23,9 +23,15 @@
     state: present
     update_cache: yes
 
+
+- name: Log in to Docker Hub
+  docker_login:
+    username: "holidahmwangi23"
+    password: "+e!3tyqN4&EcH4T"
+
 - name: Pull frontend image from Docker Hub
   docker_image:
-    name: holidahmwangi23/yoloprojectfrontend:V1.0.1
+    name: holidahmwangi23/yoloproject:V1.0.3
     source: pull
 
 - name: Create Docker network
@@ -35,7 +41,7 @@
 - name: Create React Frontend Container
   docker_container:
     name: yolo_frontend
-    image: holidahmwangi23/yoloprojectfrontend:V1.0.1
+    image: holidahmwangi23/yoloproject:V1.0.3
     networks:
       - name: yolo_default
     ports:
