--- a/manifests/mongo-deployment.yaml
+++ b/manifests/mongo-deployment.yaml
@@ -1,9 +1,10 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: mongo
 spec:
-  replicas: 1
+  serviceName: "mongo"
+  replicas: 3
   selector:
     matchLabels:
       app: mongo
@@ -27,7 +28,24 @@ spec:
           limits:
             memory: "2Gi"
             cpu: "1"
-      volumes:
-      - name: mongo-data
-        persistentVolumeClaim:
-          claimName: mongo-pvc
+  volumeClaimTemplates:
+  - metadata:
+      name: mongo-data
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 5Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo
+spec:
+  selector:
+    app: mongo
+  ports:
+    - protocol: TCP
+      port: 27017
+      targetPort: 27017
+  clusterIP: None  # This makes it a headless service for StatefulSet
